# multi-agents-db-dict

./: .env  Chinook_Sqlite_data_dictionary.json  Chinook_Sqlite_execution_path.json  Chinook_Sqlite_execution_trace.json  README.md  main.py  pyproject.toml
agents/: __init__.py  a2a_integration.py  build_dictionary.py  discover_schema.py  executer.py  map_relationships.py  nl2sql.py  orchestrator.py  runtime.py
mcp/: tools.py
tests/: test_a2a_contracts.py
